@@ -2,7 +2,6 @@ package data.pet.services.implementations;
 
 import data.pet.dto.request.PetFilterDto;
 import data.pet.dto.response.PetDto;
-import data.pet.entity.Hair;
 import data.pet.entity.Pet;
 import data.pet.repository.PetRepo;
 import data.pet.services.interfaces.ImageService;
@@ -16,7 +15,6 @@ import java.time.LocalDate;
 import java.time.Period;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -28,30 +26,41 @@ public class PetServiceImpl implements PetService {
     EntityManager entityManager;
 
     @Override
-    public List<PetDto> getAllPets() {
-        return petRepo.findByIsBookedFalseAndIsAdoptedFalse().stream()
+    public List<PetDto> getAllPetsForUser() {
+        return petRepo.findAllIsBookedFalseAndIsAdoptedFalse().stream()
                 .map(this::mapPetToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<PetDto> getAllPetsForAdmin() {
         return petRepo.findAll().stream()
                 .map(this::mapPetToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public List<PetDto> getPetsByTypeId(Long typeId) {
-        return petRepo.findAllPetsByTypeId(typeId).stream()
+    public List<PetDto> getPetsByTypeIdForUser(Long typeId) {
+        return petRepo.findAllByPetTypeIdAndIsBookedFalseAndIsAdoptedFalse(typeId).stream()
                 .map(this::mapPetToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public Optional<PetDto> getPetById(Long petId) {
+    public Optional<PetDto> getPetDtoByIdForUser(Long petId) {
         return petRepo.findById(petId)
                 .map(this::mapPetToDto);
+    }
+
+    @Override
+    public Optional<Pet> getPetById(Long petId) {
+        return petRepo.findById(petId);
+    }
+
+    @Override
+    public void updateBookStatusPet(Pet pet, boolean isBooked) {
+        pet.setBooked(isBooked);
+        petRepo.save(pet);
     }
 
     private PetDto mapPetToDto(Pet pet) {
@@ -62,7 +71,7 @@ public class PetServiceImpl implements PetService {
         petDto.setDescription(pet.getDescription());
         petDto.setHistory(pet.getHistory());
         petDto.setHealth(pet.getHealthType().getName());
-        petDto.setAllMonths(calculateAgeInMonths(pet.getDateOfBirth()));
+        petDto.setBirthDate(pet.getDateOfBirth());
         petDto.setCreatedDate(pet.getCreatedAt().toLocalDate().toString());
         petDto.setBooked(pet.isBooked());
         petDto.setAdopted(pet.isAdopted());
@@ -70,7 +79,7 @@ public class PetServiceImpl implements PetService {
         petDto.setPetType(pet.getPetTypeId().getName());
         petDto.setColor(pet.getColor().getName());
         petDto.setHair(pet.getHair().getName());
-        petDto.setSize(pet.getSize().getName());
+        petDto.setSize(pet.getPetSize() != null ? pet.getPetSize().getName() : null);
         petDto.setPathToAvatar(imageService.getImages(pet.getImages(), true).stream().findFirst().orElse(null));
         petDto.setPathsToGallery(imageService.getImages(pet.getImages(), false));
         return petDto;
@@ -81,7 +90,7 @@ public class PetServiceImpl implements PetService {
     }
 
     @Override
-    public List<PetDto> getPetsByFilter(PetFilterDto petFilter) {
+    public List<PetDto> getPetsByFilterForUser(PetFilterDto petFilter) {
         LocalDate maxBirthDate = calculateBirthDateFromAgeInMonths(petFilter.getMinAgeInMonths());
         LocalDate minBirthDate = calculateBirthDateFromAgeInMonths(petFilter.getMaxAgeInMonths());
         if (maxBirthDate == null) {
@@ -103,7 +112,7 @@ public class PetServiceImpl implements PetService {
                         petFilter.getSizeId()
                 ).stream()
                 .map(this::mapPetToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private LocalDate calculateBirthDateFromAgeInMonths(Integer ageInMonths) {
